--- a/locale/ko_KR.json
+++ b/locale/ko_KR.json
@@ -50,7 +50,7 @@
     "更新": "업데이트",
     "详情": "상세",
     "好": "예",
-    "川虎Chat 🚀": "Chuanhu Chat 🚀",
+    "YBchat 🚀": "Chuanhu Chat 🚀",
     "开始实时传输回答……": "실시간 응답 출력 시작...",
     "Token 计数: ": "토큰 수: ",
     "，本次对话累计消耗了 ": "，이 대화의 전체 비용은 ",
@@ -73,7 +73,7 @@
     "API key为空，请检查是否输入正确。": "API 키가 비어 있습니다. 올바르게 입력되었는지 확인하십세요.",
     "请输入对话内容。": "대화 내용을 입력하세요.",
     "账单信息不适用": "청구 정보를 가져올 수 없습니다",
-    "由Bilibili [土川虎虎虎](https://space.bilibili.com/29125536)、[明昭MZhao](https://space.bilibili.com/24807452) 和 [Keldos](https://github.com/Keldos-Li) 开发<br />访问川虎Chat的 [GitHub项目](https://github.com/GaiZhenbiao/ChuanhuChatGPT) 下载最新版脚本": "제작: Bilibili [土川虎虎虎](https://space.bilibili.com/29125536), [明昭MZhao](https://space.bilibili.com/24807452), [Keldos](https://github.com/Keldos-Li)\n\n최신 코드 다운로드: [GitHub](https://github.com/GaiZhenbiao/ChuanhuChatGPT)",
+    "YBchat的 [GitHub项目](https://github.com/chatgptos/YBchat) 下载最新版脚本": "Developed by YBchat[GitHub](https://github.com/chatgptos/YBchat)",
     "切换亮暗色主题": "라이트/다크 테마 전환",
     "您的IP区域：未知。": "IP 지역: 알 수 없음.",
     "获取IP地理位置失败。原因：": "다음과 같은 이유로 IP 위치를 가져올 수 없습니다. 이유: ",
