--- a/locale/ja_JP.json
+++ b/locale/ja_JP.json
@@ -49,7 +49,7 @@
     "更新": "アップデート",
     "详情": "詳細",
     "好": "はい",
-    "川虎Chat 🚀": "川虎Chat 🚀",
+    "YBchat 🚀": "YBchat 🚀",
     "开始实时传输回答……": "ストリーム出力開始……",
     "Token 计数: ": "Token数: ",
     "，本次对话累计消耗了 ": ", 今の会話で消費合計 ",
@@ -72,7 +72,7 @@
     "API key为空，请检查是否输入正确。": "APIキーが入力されていません。正しく入力されているか確認してください。",
     "请输入对话内容。": "会話内容を入力してください。",
     "账单信息不适用": "課金情報は対象外です",
-    "由Bilibili [土川虎虎虎](https://space.bilibili.com/29125536)、[明昭MZhao](https://space.bilibili.com/24807452) 和 [Keldos](https://github.com/Keldos-Li) 开发<br />访问川虎Chat的 [GitHub项目](https://github.com/GaiZhenbiao/ChuanhuChatGPT) 下载最新版脚本": "開発：Bilibili [土川虎虎虎](https://space.bilibili.com/29125536) と [明昭MZhao](https://space.bilibili.com/24807452) と [Keldos](https://github.com/Keldos-Li)\n\n最新コードは川虎Chatのサイトへ [GitHubプロジェクト](https://github.com/GaiZhenbiao/ChuanhuChatGPT)",
+    "YBchat的 [GitHub项目](https://github.com/chatgptos/YBchat) 下载最新版脚本": "Developed by YBchat[GitHub](https://github.com/chatgptos/YBchat)",
     "切换亮暗色主题": "テーマの明暗切替",
     "您的IP区域：未知。": "あなたのIPアドレス地域：不明",
     "获取IP地理位置失败。原因：": "IPアドレス地域の取得に失敗しました。理由：",
